# display-sound-manager

./: LICENSE  README.md  package-lock.json  package.json
src/: App.css  App.tsx  index.html  main.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main copy.rs.backup  main.rs
