
[package]
name = "display-sound-manager"
version = "0.1.0"
description = "Display and Sound Profile Manager"
authors = ["Your Name"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-log = "2.0.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
